tests/baselines/reference/templateStringInEqualityChecks.errors.txt
tests/cases/conformance/es6/templates/templateStringInEqualityChecks.ts(1,9): error TS2367: This condition will always return 'false' since the types '"abc0abc"' and '"abc"' have no overlap.
tests/cases/conformance/es6/templates/templateStringInEqualityChecks.ts(2,9): error TS2367: This condition will always return 'true' since the types '"abc"' and '"abc0abc"' have no overlap.


==== tests/cases/conformance/es6/templates/templateStringInEqualityChecks.ts (2 errors) ====
    var x = `abc${0}abc` === `abc` ||
            ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2367: This condition will always return 'false' since the types '"abc0abc"' and '"abc"' have no overlap.
            `abc` !== `abc${0}abc` &&
            ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2367: This condition will always return 'true' since the types '"abc"' and '"abc0abc"' have no overlap.
            `abc${0}abc` == "abc0abc" &&
            "abc0abc" !== `abc${0}abc`;